src/test/ui/pub/pub-restricted-error.stderr
error: expected identifier, found `(`
  --> $DIR/pub-restricted-error.rs:6:16
   |
LL |     pub(crate) () foo: usize,
   |                ^ expected identifier

error: aborting due to previous error

